Fixed the footer overlapping certain elements

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -351,3 +351,7 @@ input[type=text], select, textarea {
     border-radius: 25px;
     padding: 20px;
 }
+
+.mt-10{
+    margin-top: 10rem;
+}
